@@ -197,9 +197,19 @@ input.searchButton{
   height: 21px !important;
 }
 
-#cnx_social_media_top .cnx_facebook{
+.cnx_google iframe{
+  width: 60px !important;
+  height: 21px !important;
+}
+
+#cnx_social_media_top .cnx_google{
   display: block;
   margin: .75em 0 .3em;
+}
+
+#cnx_social_media_top .cnx_facebook{
+  display: block;
+  margin: .3em 0;
 }
 
 #cnx_social_media_top .cnx_twitter{
@@ -215,6 +225,12 @@ input.searchButton{
 
 #cnx_social_media_bottom .cnx_twitter{
   padding-right: .5em;
+  margin-right: .6em;
+  border-right: 1px solid #666;
+}
+
+#cnx_social_media_bottom .cnx_google{
+  padding-right: .2em;
   margin-right: .6em;
   border-right: 1px solid #666;
 }
@@ -584,6 +600,7 @@ li{
 #cnx_module_header{
   border-bottom: 1px solid #fc0;
   margin-bottom: 1em;
+  min-height: 90px;
 }
 
 * html #cnx_module_header{ height: 1%; }
