@@ -1,3 +1,6 @@
+CNXContent-0.45
+  - Google 1+ button
+
 CNXContent-0.44
   - caching
   - twitbook button fix for print page
